--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^6.5.9",
+    "@astrojs/netlify": "^6.5.11",
     "@observablehq/plot": "^0.6.17",
     "@tailwindcss/vite": "^4.1.13",
     "astro": "^5.13.5",
     "jsdom": "^26.1.0",
+    "netlify": "^23.7.3",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
